# security-cam-server

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  index.html  login.html  prompt.txt  shuttle_setup_container.sh
examples/: generate_password_hash.rs
src/: authentication.rs  encryption.rs  errors.rs  ffmpeg.rs  lib.rs  main.rs  video.rs
